hphp/hack/test/typecheck/idx2_3.php.like_types.exp
File "idx2_3.php", line 10, characters 12-13:
Invalid argument (Typing[4110])
File "idx.hhi", line 32, characters 4-25:
Expected KeyedContainer<[unresolved], ?[unresolved]>
File "idx2_3.php", line 3, characters 15-30:
But got dynamic because it is an unenforceable type
